--- a/src/main/webapp/app/entities/reservation/reservation-detail.component.html
+++ b/src/main/webapp/app/entities/reservation/reservation-detail.component.html
@@ -13,14 +13,6 @@
                 <dd>
                     <span>{{reservation.status}}</span>
                 </dd>
-                <dt><span jhiTranslate="happybourBackEndApp.reservation.startTime">Start Time</span></dt>
-                <dd>
-                    <span>{{reservation.startTime}}</span>
-                </dd>
-                <dt><span jhiTranslate="happybourBackEndApp.reservation.endTime">End Time</span></dt>
-                <dd>
-                    <span>{{reservation.endTime}}</span>
-                </dd>
                 <dt><span jhiTranslate="happybourBackEndApp.reservation.reserverDate">Reserver Date</span></dt>
                 <dd>
                     <span>{{reservation.reserverDate}}</span>
@@ -28,6 +20,10 @@
                 <dt><span jhiTranslate="happybourBackEndApp.reservation.updatedDate">Updated Date</span></dt>
                 <dd>
                     <span>{{reservation.updatedDate}}</span>
+                </dd>
+                <dt><span jhiTranslate="happybourBackEndApp.reservation.period">Period</span></dt>
+                <dd>
+                    <span>{{reservation.period}}</span>
                 </dd>
                 <dt><span jhiTranslate="happybourBackEndApp.reservation.staff">Staff</span></dt>
                 <dd>
