--- a/src/main/webapp/app/entities/cart/cart-update.component.html
+++ b/src/main/webapp/app/entities/cart/cart-update.component.html
@@ -28,6 +28,16 @@
                     <input type="number" class="form-control" name="totalItem" id="field_totalItem"
                         [(ngModel)]="cart.totalItem" />
                 </div>
+                <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="happybourBackEndApp.cart.productName" for="field_productName">Product Name</label>
+                    <input type="text" class="form-control" name="productName" id="field_productName"
+                        [(ngModel)]="cart.productName" />
+                </div>
+                <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="happybourBackEndApp.cart.productPrice" for="field_productPrice">Product Price</label>
+                    <input type="number" class="form-control" name="productPrice" id="field_productPrice"
+                        [(ngModel)]="cart.productPrice" />
+                </div>
 
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="happybourBackEndApp.cart.product" for="field_product">Product</label>
