--- a/src/main/webapp/app/entities/book-table/book-table-update.component.html
+++ b/src/main/webapp/app/entities/book-table/book-table-update.component.html
@@ -15,11 +15,6 @@
                         [(ngModel)]="bookTable.isAvaliable" />
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="happybourBackEndApp.bookTable.persons" for="field_persons">Persons</label>
-                    <input type="number" class="form-control" name="persons" id="field_persons"
-                        [(ngModel)]="bookTable.persons" />
-                </div>
-                <div class="form-group">
                     <label class="form-control-label" jhiTranslate="happybourBackEndApp.bookTable.price" for="field_price">Price</label>
                     <input type="number" class="form-control" name="price" id="field_price"
                         [(ngModel)]="bookTable.price" />
@@ -36,6 +31,19 @@
                         <option [ngValue]="null"></option>
                         <option [ngValue]="restaurantOption.id" *ngFor="let restaurantOption of restaurants; trackBy: trackRestaurantById">{{restaurantOption.id}}</option>
                     </select>
+                </div>
+                <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="happybourBackEndApp.bookTable.tableType" for="field_tableType">Table Type</label>
+                    <select class="form-control" id="field_tableType" name="tableType" [(ngModel)]="bookTable.tableTypeId"  required>
+                        <option *ngIf="!editForm.value.tableType" [ngValue]="null" selected></option>
+                        <option [ngValue]="tableTypeOption.id" *ngFor="let tableTypeOption of tabletypes; trackBy: trackTableTypeById">{{tableTypeOption.id}}</option>
+                    </select>
+                </div>
+                <div [hidden]="!(editForm.controls.tableType?.dirty && editForm.controls.tableType?.invalid)">
+                    <small class="form-text text-danger"
+                        [hidden]="!editForm.controls.tableType?.errors?.required" jhiTranslate="entity.validation.required">
+                        This field is required.
+                    </small>
                 </div>
             </div>
             <div>
