--- a/src/main/webapp/app/account/password-reset/finish/password-reset-finish.component.html
+++ b/src/main/webapp/app/account/password-reset/finish/password-reset-finish.component.html
@@ -1,7 +1,7 @@
 <div>
     <div class="row justify-content-center">
         <div class="col-md-4">
-            <h1 jhiTranslate="reset.finish.title">Reset password</h1>
+            <h1 >Password Management</h1>
 
             <div class="alert alert-danger" jhiTranslate="reset.finish.messages.keymissing" *ngIf="keyMissing">
                 <strong>The password reset key is missing.</strong>
@@ -17,7 +17,7 @@
 
             <p class="alert alert-success" *ngIf="success">
                 <span jhiTranslate="reset.finish.messages.success"><strong>Your password has been reset.</strong> Please </span>
-                <a class="alert-link" (click)="login()" jhiTranslate="global.messages.info.authenticated.link">sign in</a>.
+                <a class="alert-link" href="http://localhost:4200/login" jhiTranslate="global.messages.info.authenticated.link">sign in</a>.
             </p>
 
             <div class="alert alert-danger" *ngIf="doNotMatch" jhiTranslate="global.messages.error.dontmatch">
@@ -68,7 +68,7 @@
                             </small>
                         </div>
                     </div>
-                    <button type="submit" [disabled]="passwordForm.form.invalid" class="btn btn-primary" jhiTranslate="reset.finish.form.button">Reset Password</button>
+                    <button type="submit" [disabled]="passwordForm.form.invalid" class="btn btn-primary">Reset Password</button>
                 </form>
             </div>
 
