--- a/src/main/webapp/app/entities/book-table/book-table-update.component.html
+++ b/src/main/webapp/app/entities/book-table/book-table-update.component.html
@@ -24,6 +24,29 @@
                     <input type="text" class="form-control" name="imageUrl" id="field_imageUrl"
                         [(ngModel)]="bookTable.imageUrl" />
                 </div>
+                <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="happybourBackEndApp.bookTable.table_image" for="field_table_image">Table Image</label>
+                    <div>
+                        <img [src]="'data:' + bookTable.table_imageContentType + ';base64,' + bookTable.table_image" style="max-height: 100px;" *ngIf="bookTable.table_image" alt="bookTable image"/>
+                        <div *ngIf="bookTable.table_image" class="form-text text-danger clearfix">
+                            <span class="pull-left">{{bookTable.table_imageContentType}}, {{byteSize(bookTable.table_image)}}</span>
+                            <button type="button" (click)="clearInputImage('table_image', 'table_imageContentType', 'fileImage')" class="btn btn-secondary btn-xs pull-right">
+                                <fa-icon [icon]="'times'"></fa-icon>
+                            </button>
+                        </div>
+                        <input type="file" id="file_table_image" (change)="setFileData($event, bookTable, 'table_image', true)" accept="image/*" jhiTranslate="entity.action.addimage"/>
+                    </div>
+                    <input type="hidden" class="form-control" name="table_image" id="field_table_image"
+                        [(ngModel)]="bookTable.table_image" required/>
+                    <input type="hidden" class="form-control" name="table_imageContentType" id="field_table_imageContentType"
+                        [(ngModel)]="bookTable.table_imageContentType" />
+                    <div [hidden]="!(editForm.controls.table_image?.dirty && editForm.controls.table_image?.invalid)">
+                        <small class="form-text text-danger"
+                        [hidden]="!editForm.controls.table_image?.errors?.required" jhiTranslate="entity.validation.required">
+                        This field is required.
+                        </small>
+                    </div>
+                </div>
 
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="happybourBackEndApp.bookTable.restaurant" for="field_restaurant">Restaurant</label>
